--- a/templates/Lucky/number.html.twig
+++ b/templates/Lucky/number.html.twig
@@ -62,17 +62,21 @@
 					<h2>{{ experience.getName() }}</h2>
 					<p class="subDetails">{{ experience.getentreprise() }} à {{ experience.getlieu() }}</p>
 					<p>{{ experience.getdescription() }}</p>
-					<div>
-						<a href="{{ path('experience_edit', {'id': experience.getId()}) }}">Modifier</a>
-					</div>
-					<di>
-						<a href="{{ path('experience_delete', {'id': experience.getId()}) }}">Delete</a>
-					</di>
+					{% if is_granted('ROLE_ADMIN') %}
+						<div>
+							<a href="{{ path('experience_edit', {'id': experience.getId()}) }}">Modifier</a>
+						</div>
+						<div>
+							<a href="{{ path('experience_delete', {'id': experience.getId()}) }}">Delete</a>
+						</div>
+					{% endif %}
 					{% endfor %}
 				</article>
-				<button>
-					<a href="{{ path('experience_new') }}">Ajouter une expérience</a>
-				</button>
+				{% if is_granted('ROLE_ADMIN') %}
+					<button>
+						<a href="{{ path('experience_new') }}">Ajouter une expérience</a>
+					</button>
+				{% endif %}
 			</div>
 			<div class="clear"></div>
 		</section>
@@ -89,18 +93,22 @@
 					{% for competence in competences %}
 					<h2>{{ competence.getname() }}</h2>
 					<p class="subDetails">{{ competence.getdescription() }}</p>
-					<div>
-						<a href="{{ path('competence_edit', {'id': competence.getId()}) }}">Modifier</a>
-					</div>
-					<div>
-						<a href="{{ path('competence_delete', {'id': competence.getId()}) }}">Delete</a>
-					</div>
+						{% if is_granted('ROLE_ADMIN') %}
+						<div>
+							<a href="{{ path('competence_edit', {'id': competence.getId()}) }}">Modifier</a>
+						</div>
+						<div>
+							<a href="{{ path('competence_delete', {'id': competence.getId()}) }}">Delete</a>
+						</div>
+						{% endif %}
 					{% endfor %}
 					</li>
 				</ul>
-				<button>
-					<a href="{{ path('competence_new') }}">Ajouter une compétence</a>
-				</button>
+				{% if is_granted('ROLE_ADMIN') %}
+					<button>
+						<a href="{{ path('competence_new') }}">Ajouter une compétence</a>
+					</button>
+				{% endif %}
 				
 			</div>
 			<div class="clear"></div>
@@ -118,17 +126,21 @@
 						<h2>{{ formation.getName() }}</h2>
 						<p class="subDetails">Du {{ formation.getdatedebut()|date("m/d/Y") }} au {{ formation.getdatefin()|date("m/d/Y") }}</p>
 						<p>{{ formation.getParagraphe() }}</p>
-						<div>
-							<a href="{{ path('formation_edit', {'id': formation.getId()}) }}">Modifier</a>
-						</div>
-						<div>
-							<a href="{{ path('formation_delete', {'id': formation.getId()}) }}">Delete</a>
-						</div>
+						{% if is_granted('ROLE_ADMIN') %}
+							<div>
+								<a href="{{ path('formation_edit', {'id': formation.getId()}) }}">Modifier</a>
+							</div>
+							<div>
+								<a href="{{ path('formation_delete', {'id': formation.getId()}) }}">Delete</a>
+							</div>
+						{% endif %}
 					{% endfor%}
 				</article>
-				<button>
-					<a href="{{ path('formation_new') }}">Ajouter une formation</a>
-				</button>
+				{% if is_granted('ROLE_ADMIN') %}
+					<button>
+						<a href="{{ path('formation_new') }}">Ajouter une formation</a>
+					</button>
+				{% endif %}
 				
 			</div>
 			<div class="clear"></div>
